buildscript {
    ext {
        springBootVersion = '3.0.1'
    }
    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

group = 'org.springframework.security.samples'
version = '2.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    implementation(
            "org.springframework.boot:spring-boot-starter-web",
            "org.springframework.boot:spring-boot-starter-security",
            "org.springframework.boot:spring-boot-starter-oauth2-resource-server",
            "org.springframework.boot:spring-boot-starter-oauth2-client",
            "org.springframework:spring-webflux",
            "io.projectreactor.netty:reactor-netty"
    )
}

